# procjam2020

./: .gitignore  CMakeLists.txt  main.cpp
components/: BaseComponent.cpp  BaseComponent.h  Holder.h  PositionComponent.cpp  PositionComponent.h  TextureComponent.cpp  TextureComponent.h  TransformComponent.cpp  TransformComponent.h
gameManagers/: ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h
nodes/: BaseNode.cpp  BaseNode.h  Sprite.cpp  Sprite.h
scenes/: BaseScene.cpp  BaseScene.h  TestScene.cpp  TestScene.h
utilities/: Events.cpp  Events.h  Rect.h  Singleton.h
